--- a/Index.html
+++ b/Index.html
@@ -11,9 +11,9 @@
         <video id="cameraFeed" autoplay></video>
         <button id="captureButton">Capture Photo</button>
     </div>
+       
+    <script src="js/app.js"></script>
 
-    <script>
-        // Your JavaScript code will go here
     </script>
 </body>
 </html>
