--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="captureButton">Capture Photo</button>
     </div>
        
-    <script src="app.js"></script>
+    <script src="App.js"></script>
 
     </script>
 </body>
