--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <video id="cameraFeed" autoplay></video>
-        <button id="captureButton">Capture Photo</button>
+        <button id="captureButton">Capture Receipt</button>
     </div>
        
     <script src="App.js"></script>
