--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div id="app">
-        <video id="cameraFeed" autoplay></video>
-        <button id="captureButton">Capture Receipt</button>
+        <input type="file" accept="image/*" capture="camera" id="cameraInput">
+        <button id="captureButton">Capture HSA Receipt</button>
     </div>
-       
-    <script src="App.js"></script>
 
+    <script>
+        // Your JavaScript code will go here
     </script>
 </body>
 </html>
