--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Camera Web App</title>
     <!-- Include the Webcam.js library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js“>
+    </script>
 </head>
 <body>
     <div id="app">
