--- a/index.html
+++ b/index.html
@@ -2,49 +2,55 @@
 <html>
 <head>
     <title>Camera Web App</title>
-    <!-- Include the Webcam.js library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js“>
-    </script>
 </head>
 <body>
-    <div id="app">
-        <button id="captureButton">Capture Photo</button>
-    </div>
-
-    <script>
-        // Initialize Webcam.js after the window has finished loading
-        window.addEventListener('load', () => {
-            const captureButton = document.getElementById('captureButton');
-
-            captureButton.addEventListener('click', () => {
-                // Initialize Webcam.js with the desired settings
-                Webcam.set({
-                    width: 640,
-                    height: 480,
-                    image_format: 'jpeg',
-                    jpeg_quality: 90,
-                });
-
-                // Access the camera and capture a photo
-                Webcam.attach('#app');
-
-                // Take the photo after a short delay to ensure the camera is ready
-                setTimeout(() => {
-                    Webcam.snap((dataURL) => {
-                        // Display the captured image on the page (optional)
-                        const imageElement = document.createElement('img');
-                        imageElement.src = dataURL;
-                        document.body.appendChild(imageElement);
-
-                        // Now you can upload the image to your server or process it as needed
-                        // The captured image is available as a dataURL in the `dataURL` variable
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        let but = document.getElementById("but");
+        let video = document.getElementById("vid");
+        let mediaDevices = navigator.mediaDevices;
+        vid.muted = true;
+        but.addEventListener("click", () => {
+ 
+            // Accessing the user camera and video.
+            mediaDevices
+                .getUserMedia({
+                    video: true,
+                    audio: true,
+                })
+                .then((stream) => {
+ 
+                    // Changing the source of video to current stream.
+                    video.srcObject = stream;
+                    video.addEventListener("loadedmetadata", () => {
+                        video.play();
                     });
-
-                    // Stop accessing the camera after capturing the photo
-                    Webcam.reset();
-                }, 500); // Delay of 500 milliseconds (adjust as needed)
-            });
+                })
+                .catch(alert);
         });
-    </script>
+    });
+</script>
+<style>
+    div {
+        width: 500px;
+        height: 400px;
+        border: 2px solid black;
+        position: relative;
+    }
+ 
+    video {
+        width: 500px;
+        height: 400px;
+        object-fit: cover;
+    }
+</style>
+<div>
+    <video id="vid"></video>
+</div>
+<br />
+<button id="but" autoplay>
+    Open WebCam
+</button>
 </body>
 </html>
+
