--- a/index.html
+++ b/index.html
@@ -1,60 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Camera Web App</title>
+  <meta charset="UTF-8">
+  <title>Save Receipts</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<script>
-    document.addEventListener("DOMContentLoaded", () => {
-        let but = document.getElementById("but");
-        let video = document.getElementById("vid");
-        let mediaDevices = navigator.mediaDevices;
-        // Fix for iOS Safari from https://leemartin.dev/hello-webrtc-on-safari-11-e8bcb5335295
-        video.setAttribute('autoplay', '');
-        video.setAttribute('muted', '');
-        video.setAttribute('playsinline', '')
-        vid.muted = true;
-        but.addEventListener("click", () => {
- 
-            // Accessing the user camera and video.
-            mediaDevices
-                .getUserMedia({
-                    video: true,
-                    audio: true,
-                })
-                .then((stream) => {
- 
-                    // Changing the source of video to current stream.
-                    video.srcObject = stream;
-                    video.addEventListener("loadedmetadata", () => {
-                        video.play();
-                    });
-                })
-                .catch(alert);
-        });
-    });
-</script>
-<style>
-    div {
-        width: 500px;
-        height: 400px;
-        border: 2px solid black;
-        position: relative;
-    }
- 
-    video {
-        width: 500px;
-        height: 400px;
-        object-fit: cover;
-    }
-</style>
-<div>
-    <video id="vid"></video>
-</div>
-<br />
-<button id="but" autoplay>
-    Open WebCam
-</button>
+
+  <div class="photobooth">
+    <div class="controls">
+      <button onClick="takePhoto()">Take Photo</button>
+<!--       <div class="rgb">
+        <label for="rmin">Red Min:</label>
+        <input type="range" min=0 max=255 name="rmin">
+        <label for="rmax">Red Max:</label>
+        <input type="range" min=0 max=255 name="rmax">
+        <br>
+        <label for="gmin">Green Min:</label>
+        <input type="range" min=0 max=255 name="gmin">
+        <label for="gmax">Green Max:</label>
+        <input type="range" min=0 max=255 name="gmax">
+        <br>
+        <label for="bmin">Blue Min:</label>
+        <input type="range" min=0 max=255 name="bmin">
+        <label for="bmax">Blue Max:</label>
+        <input type="range" min=0 max=255 name="bmax">
+      </div> -->
+    </div>
+
+    <canvas class="photo"></canvas>
+    <video class="player"></video>
+    <div class="strip"></div>
+  </div>
+
+  <audio class="snap" src="./snap.mp3" hidden></audio>
+
+  <script src="App.js"></script>
+
 </body>
 </html>
-
