--- a/index.html
+++ b/index.html
@@ -2,30 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Save Receipts</title>
+  <title>Camera Web App</title>
   <link rel="stylesheet" href="style.css">
+  <script src="App.js"></script>
 </head>
 <body>
-
+  <div id="app">
+    
+  </div>
   <div class="photobooth">
     <div class="controls">
       <button onClick="takePhoto()">Take Photo</button>
-<!--       <div class="rgb">
-        <label for="rmin">Red Min:</label>
-        <input type="range" min=0 max=255 name="rmin">
-        <label for="rmax">Red Max:</label>
-        <input type="range" min=0 max=255 name="rmax">
-        <br>
-        <label for="gmin">Green Min:</label>
-        <input type="range" min=0 max=255 name="gmin">
-        <label for="gmax">Green Max:</label>
-        <input type="range" min=0 max=255 name="gmax">
-        <br>
-        <label for="bmin">Blue Min:</label>
-        <input type="range" min=0 max=255 name="bmin">
-        <label for="bmax">Blue Max:</label>
-        <input type="range" min=0 max=255 name="bmax">
-      </div> -->
+      <button onClick="switchCameraButton">Switch Camera</button>
     </div>
 
     <canvas class="photo"></canvas>
@@ -35,7 +23,6 @@
 
   <audio class="snap" src="./snap.mp3" hidden></audio>
 
-  <script src="App.js"></script>
 
 </body>
 </html>
