--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     </div>
 
     <canvas class="photo"></canvas>
-    <video class="player"></video>
+    <div id="video-container">
+      <video class="player"></video>
+    </div>
     <div class="strip"></div>
   </div>
 
